# libfrancor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/src/: find_blue_lines_in_image.cpp  localize_ego_on_occupancy_grid.cpp  simulate_laser_scans.cpp  slam_occupancy_grid.cpp  updating_occupancy_grid.cpp
francor_algorithm/: CMakeLists.txt
francor_algorithm/cmake/: Findlz4.cmake
francor_algorithm/include/francor_algorithm/: array_data_access.h  estimate_3d_coordinate.h  estimate_transform.h  flann_point_pair_estimator.h  geometry_fitting.h  icp.h  line_processing_pipeline.h  pipeline_stage_estimate_transform.h  point_pair_estimator.h  ransac.h  ransac_target_model.h  ray_caster_2d.h  shared_array.h
francor_algorithm/src/: estimate_transform.cpp  flann_point_pair_estimator.cpp  geometry_fitting.cpp  icp.cpp  pipeline_stage_estimate_transform.cpp  ray_caster_2d.cpp
francor_algorithm/test/: CMakeLists.txt
francor_algorithm/test/src/: unit_test_array_data_access.cpp  unit_test_estimate_transform.cpp  unit_test_flann_point_pair_estimator.cpp  unit_test_geometry_fitting.cpp  unit_test_icp.cpp  unit_test_line_ransac.cpp  unit_test_line_segment_ransac.cpp  unit_test_ransac.cpp  unit_test_ray_caster_2d.cpp  unit_test_shared_array.cpp
francor_base/: CMakeLists.txt
francor_base/include/francor_base/: angle.h  ego_motion_sensor_data.h  exception.h  laser_scan.h  line.h  line_segment.h  log.h  matrix.h  memory.h  parameter.h  parameter_constrain.h  point.h  pose.h  pose_sensor_data.h  rect.h  reference_counter.h  sensor_data.h  sensor_measurment.h  shared_array.h  size.h  transform.h  vector.h
francor_base/include/francor_base/algorithm/: laser_scan.h  line.h  math.h  point.h  transform.h
francor_base/include/francor_base/algorithm/impl/: transform_eigen.h  transform_std.h
francor_base/src/: log.cpp
francor_base/src/algorithm/: laser_scan.cpp  point.cpp  transform.cpp
francor_base/src/algorithm/impl/: transform_eigen.cpp  transform_std.cpp
francor_base/test/: CMakeLists.txt
francor_base/test/src/: unit_test_angle.cpp  unit_test_line.cpp  unit_test_logger.cpp  unit_test_math.cpp  unit_test_memory.cpp  unit_test_parameter.cpp  unit_test_point.cpp  unit_test_rect.cpp  unit_test_shared_array.cpp  unit_test_size.cpp  unit_test_transform.cpp
francor_can/: CMakeLists.txt
francor_can/include/francor_can/: can.h  can_exception.h  msg.h  socketcan.h
francor_can/src/: socketcan.cpp
francor_can/test/: CMakeLists.txt
francor_can/test/src/: unit_test_msg.cpp  unit_test_socketcan.cpp
francor_drive/: CMakeLists.txt
francor_drive/include/francor_drive/: drive.h  rmd_x8_drive.h  value.h
francor_drive/src/: rmd_x8_drive.cpp
francor_drive/test/: CMakeLists.txt
francor_drive/test/src/: unit_test_value.cpp
francor_mapping/: CMakeLists.txt
francor_mapping/include/francor_mapping/: ego_kalman_filter_model.h  ego_kalman_model.h  ego_motion_sensor_model.h  ego_object.h  grid.h  kalman_filter.h  kalman_filter_model.h  kinematic_attributes.h  kinematic_state_vector.h  kinematic_state_vector_impl.h  kinematic_state_vector_specialization.h  lidar_rotating_sensor_model.h  observation_matrix.h  observation_matrix_builder.h  occupancy_grid.h  occupancy_grid_sensor_model.h  pipeline_occupancy_grid.h  pipeline_stage_create_pose_measurement.h  pipeline_stage_ego_object.h  pipeline_stage_occupancy_grid.h  pose_sensor_model.h  sensor_model.h  state_attributes.h  tsd_grid.h  tsd_slam_processing_pipeline.h
francor_mapping/include/francor_mapping/algorihm/: grid.h  occupancy_grid.h  tsd.h
francor_mapping/include/francor_mapping/algorithm/: grid.h  grid_impl.h  occupancy_grid.h  tsd.h
francor_mapping/src/: ego_kalman_filter_model.cpp  grid.cpp  grid_impl.cpp  lidar_rotating_sensor_model.cpp  occupancy_grid.cpp  occupancy_grid_sensor_model.cpp  pipeline_occupancy_grid.cpp  pipeline_stage_create_pose_measurement.cpp  pipeline_stage_ego_object.cpp  pipeline_stage_occupancy_grid.cpp  tsd_grid.cpp
francor_mapping/src/algorithm/: grid.cpp  occupancy_grid.cpp  tsd.cpp
francor_mapping/test/: CMakeLists.txt
francor_mapping/test/src/: unit_test_grid.cpp  unit_test_grid_algorithm.cpp  unit_test_kalman_filter.cpp  unit_test_kinematic_state_vector.cpp  unit_test_observation_matrix_builder.cpp  unit_test_occupancy_grid_algorithm.cpp  unit_test_pose_sensor_model.cpp  unit_test_state_attribute_vector.cpp  unit_test_tsd_algorithm.cpp  validation_occupancy_register_and_reconstruction.cpp
francor_processing/: CMakeLists.txt
francor_processing/include/francor_processing/: data_processing_pipeline.h  data_processing_pipeline_port.h  data_processing_pipeline_port_block.h  data_processing_pipeline_stage.h  data_processing_port.h
francor_processing/src/: data_processing_pipeline.cpp  data_processing_port.cpp
francor_processing/test/: CMakeLists.txt
francor_processing/test/src/: unit_test_data_processing_pipeline.cpp  unit_test_data_processing_pipeline_port.cpp  unit_test_data_processing_pipeline_port_block.cpp  unit_test_data_processing_pipeline_stage.cpp  unit_test_data_processing_port.cpp
francor_vision/: CMakeLists.txt
francor_vision/include/francor_vision/: colour_space.h  filter_image_mask_filter.h  filter_image_pipeline.h  image.h  image_filter.h  image_filter_criteria.h  image_filter_pipeline.h  image_processing_pipeline.h  io.h  pixel.h
francor_vision/src/: image.cpp
francor_vision/test/: CMakeLists.txt
francor_vision/test/src/: unit_test_filter_image.cpp  unit_test_filter_image_criteria.cpp  unit_test_image.cpp  unit_test_io.cpp
